# telepathy-poison

./: Makefile.am  README.md  configure.ac
src/: connection.vala  connectionmanager.vala  passwordchannel.vala  protocol.vala  textchannel.vala  util.vala
src/telepathy/: channel.vala  connection.vala  connectionmanager.vala  errors.vala  protocol.vala
vapi/: libtoxcore.vapi  misc.vapi
